--- a/Info.plist
+++ b/Info.plist
@@ -7,9 +7,9 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.glebarestov.seesu</string>
 	<key>CFBundleName</key>
-	<string>Seesu Music Player</string>
+	<string>Seesu</string>
 	<key>CFBundleVersion</key>
-	<string>1.7</string>
+	<string>1.94</string>
 	<key>MainHTML</key>
 	<string>index.html</string>
 	<key>AllowNetworkAccess</key>
